products-service/products/src/main/java/com/example/products/errors/exceptions/productExceptions/ProductIngrNotFound.java
package com.example.products.errors.exceptions.productExceptions;

public class ProductIngrNotFound extends RuntimeException
{
    public ProductIngrNotFound(String message)
    {
        super(message);
    }
}
